--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/_Layout.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Shared/_Layout.cshtml
@@ -208,7 +208,7 @@
             </div> <!-- content -->
 
             <footer class="footer">
-                © 2019 Dario De Nardi
+                © 2019 Nomisma
             </footer>
             @Html.Raw(Consent.Instance.Install())
         </div>
