Currency View Fix

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Currency/Index.cshtml
@@ -349,6 +349,9 @@
         var boolReader = '@User.IsInRole("Reader")' == "True";
 
         var notesNameMax = '@notesNameLenAttr.MaximumLength';
+
+        var value = '@value';
+        var notes = '@notes';
     </script>
 
     @Scripts.Render("~/Scripts/currency")
