--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Variable/Index.cshtml
@@ -184,7 +184,7 @@
 @*Create A Popup Modal For Add*@
 
 <div class="modal fade" id="MyModal">
-    <div class="modal-dialog">
+    <div class="modal-dialog" style="width:55%">
         <div class="modal-content">
 
             <div class="modal-header">
