Source View Fix, Log Id View Fix and MaxLength Fix

--- a/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Register.cshtml
+++ b/TobaccoNicotineApplication/TobaccoNicotineApplication/Views/Account/Register.cshtml
@@ -91,6 +91,8 @@
                         <div class="col-xs-12">
                             <input type="text" class="form-control" name="UserName"
                                    placeholder="Enter a valid username"
+                                   data-parsley-minlength="3"
+                                   data-parsley-maxlength="50"
                                    data-parsley-required-message="Please enter your username."
                                    data-parsley-required />
                         </div>
